Se cambio el Result por last bet

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     Gwei required: 21.</p>
                             </div>
                         </div>
-                        <p>Wait for the result from 1 to 2 minutes, in <a title="Results" onclick="getfocus()" class="links">Results</a>.</p>
+                        <p>Wait for the result from 1 to 2 minutes, in <a title="Results" onclick="getfocus()" class="links">Last bet</a>.</p>
                         <p>3. Our prizes are:</p>
                         <div class="contenedor-premios">
                                 <img src="assets/how-to-play/premio1.png" alt="" class="img-fluid">
@@ -173,7 +173,7 @@
             <!-- Chat -->
             <div class="box information" id="chat">
                 <div class="tittle-chat" onclick="change_focus()">
-                    <h3><span id="tittle-chat-span">CHAT </span>/<span id="tittle-table-span" class="activo"> RESULT(BETS)</span></h3>
+                    <h3><span id="tittle-chat-span">CHAT </span>/<span id="tittle-table-span" class="activo"> LAST BET</span></h3>
                 </div>
                 <div id="datos">
 
@@ -320,7 +320,7 @@
                     <!-- BETS -->
                     <div class="tab">
                         <input id="tab-three" type="checkbox" name="tabs">
-                        <label for="tab-three">RESULT(BETS)</label>
+                        <label for="tab-three">LAST BET</label>
                         <div class="tab-content">
                             <div id="datos-m">
 
