se cambio el punto 3 del slider de free bets

--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
                                 <span></span>
                                 <p><span class="negro">1.</span> Only those who have lost will receive their free bets</p>
                                 <p><span class="negro">2.</span> The minimum bet of this promotion is .01 ETH, up to a maximum bet of 1 ETH.</p>
-                                <p><span class="negro">3.</span> The url of the transaction made, must be published in the thread of the promotion.</p>
+                                <p><span class="negro">3.</span> The url of the transaction made in the promotion thread must be published in the bitcointalk forum.</p>
                             </div>
                         </div>
                         <div class="slider">
