--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
                         <input type="image" src="assets/game/btn-play.png" onclick="openModal(this.id)" id="how-play">
                     </div>
                 </div>
+                <!-- <div class="contenedor_video">
+                    <button type="button" name="button" class="btn_video" onclick="openModal(this.id)" id="video">presionar</button>
+                </div> -->
             </div>
             <!-- Chat -->
             <div class="box information" id="chat">
@@ -861,6 +864,21 @@
                     <ul class="eth">
                         <li><a href="https://etherscan.io/address/0xfeac34425a3ba2fafbbeedb367ac5f4b4bb701d2#code" target="_blank">https://etherscan.io/address/0xfeac34425a3ba2fafbbeedb367ac5f4b4bb701d2#code</a></li>
                     </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Video -->
+    <div class="video" id="video-window">
+        <!-- Modal content -->
+        <div class="modal" id="video-modal">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <span class="close" id="video-close">&times;</span>
+                    <h2>Video</h2>
+                </div>
+                <div class="modal-body">
+                    <iframe width="100%" height="400" src="https://www.youtube.com/embed/YzbCizaN8CE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
