--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     Gwei required: 21.</p>
                             </div>
                         </div>
-                        <p>Wait for the result from 1 to 2 minutes, in <a title="Results" onclick="getfocus()" class="links">Results</a>.</p>
+                        <p>Wait for the result from 1 to 2 minutes, in <a title="Results" onclick="getfocus()" class="links">Last bet.</a>.</p>
                         <p>3. Our prizes are:</p>
                         <div class="contenedor-premios">
                                 <img src="assets/how-to-play/premio1.png" alt="" class="img-fluid">
@@ -166,12 +166,15 @@
                     <div class="btn-play" id="contenedor_btn_machine">
                         <!-- Aqui se escribe desde el JS -->
                     </div>
+                    <div class="contenedor_video">
+                        <button type="button" name="button" class="btn_video" onclick="openModal(this.id)" id="video">presionar</button>
+                    </div>
                 </div>
             </div>
             <!-- Chat -->
             <div class="box information" id="chat">
                 <div class="tittle-chat" onclick="change_focus()">
-                    <h3><span id="tittle-chat-span">CHAT </span>/<span id="tittle-table-span" class="activo"> BETS</span></h3>
+                    <h3><span id="tittle-chat-span">CHAT </span>/<span id="tittle-table-span" class="activo"> LAST BET</span></h3>
                 </div>
                 <div id="datos">
 
@@ -318,7 +321,7 @@
                     <!-- BETS -->
                     <div class="tab">
                         <input id="tab-three" type="checkbox" name="tabs">
-                        <label for="tab-three">BETS</label>
+                        <label for="tab-three">LAST BET</label>
                         <div class="tab-content">
                             <div id="datos-m">
 
@@ -704,7 +707,7 @@
                 </div>
                 <div class="free-bets-datos" id="contenedor-free-bets">
                     <!-- Contenedor de los datos -->
-                    <h2 style="color: yellow; margin-top:50px; font-size: 60px;">Coming Soon</h2>                    
+                    <h2 style="color: yellow; margin-top:50px; font-size: 60px;">Coming Soon</h2>
                     <!-- <div class="contenedor-Bdatos">
                         <h2 class="">Check your free bets</h2>
                         <div class="search">
