se agrego funcion de ver/ocultar video bottom

--- a/index.html
+++ b/index.html
@@ -166,9 +166,9 @@
                     <div class="btn-play" id="contenedor_btn_machine">
                         <!-- Aqui se escribe desde el JS -->
                     </div>
-                    <div class="contenedor_video">
-                        <button type="button" name="button" class="btn_video" onclick="openModal(this.id)" id="video">presionar</button>
-                    </div>
+                </div>
+                <div class="contenedor_video">
+                    <button type="button" name="button" class="btn_video" onclick="abrirVideo()">presionar</button>
                 </div>
             </div>
             <!-- Chat -->
@@ -844,6 +844,9 @@
                 <p>That is why Jackypot is revolutionizing with the high technology of Blokchain applied in Ethereum, providing the best standards in security and speed, as well as having the possibility of winning up to 55.55% more, against what was determined in other sites of bets</p>
             </div>
         </div>
+        <div class="contenedor_video_div" id="contenedor_video_div">
+            <iframe width="100%" height="200" src="https://www.youtube.com/embed/jthE5swmSvY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
     </div>
     <!-- Modals -->
     <!-- Contrato Git -->
@@ -998,6 +1001,7 @@
             </div>
         </div>
     </div>
+
     <script type="text/javascript" src="js/index.js"></script>
     <script type="text/javascript" src="js/form.js"></script>
     <script type="text/javascript" src="js/machine.js"></script>
