cambios en video, y version sin metamask

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     </div>
                 </div>
                 <div class="contenedor_video">
-                    <button type="button" name="button" class="btn_video" onclick="abrirVideo()">presionar</button>
+                    <button type="button" name="button" class="btn_video" onclick="abrirVideo()">Show Tutorial</button>
                 </div>
             </div>
             <!-- Chat -->
@@ -845,7 +845,8 @@
             </div>
         </div>
         <div class="contenedor_video_div" id="contenedor_video_div">
-            <iframe width="100%" height="200" src="https://www.youtube.com/embed/jthE5swmSvY" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+            <img src="assets/game/close.png" alt="" onclick="cerrarVideo()">
+            <iframe id="video" width="100%" height="200" src="https://www.youtube.com/embed/BJMqkJ5YT30" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
         </div>
     </div>
     <!-- Modals -->
