Min y Max input, Nombre de las carteras

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
                         <div class="wallets">
                             <ul>
                                 <li><a href="https://www.myetherwallet.com/" title="MyEtherWallet" target="_blank"><img src="assets/how-to-play/01.png" alt="" class="img-fluid"></a></li>
-                                <li><a href="https://ethereum.org/" title="Mist Ethereum" target="_blank"><img src="assets/how-to-play/02.png" alt="" class="img-fluid"></a></li>
+                                <li><a href="https://ethereum.org/" title="Mist" target="_blank"><img src="assets/how-to-play/02.png" alt="" class="img-fluid"></a></li>
                                 <li><a href="https://metamask.io/" title="MetaMask" target="_blank"><img src="assets/how-to-play/03.png" alt="" class="img-fluid"></a></li>
                                 <li><a href="https://jaxx.io/" title="Jaxx" target="_blank"><img src="assets/how-to-play/04.png" alt="" class="img-fluid"></a></li>
-                                <li><a href="https://www.exodus.io/" title="Exodus Wallet" target="_blank"><img src="assets/how-to-play/05.png" alt="" class="img-fluid"></a></li>
+                                <li><a href="https://www.exodus.io/" title="Exodus" target="_blank"><img src="assets/how-to-play/05.png" alt="" class="img-fluid"></a></li>
                             </ul>
                         </div>
                         <p>2. Send the amount of ETH you want to bet on this address:</p>
@@ -212,10 +212,10 @@
                             <div class="wallets">
                                 <ul>
                                     <li><a href="https://www.myetherwallet.com/" title="MyEtherWallet" target="_blank"><img src="assets/how-to-play/01.png" alt="" class="img-fluid"></a></li>
-                                    <li><a href="https://ethereum.org/" title="Mist Ethereum" target="_blank"><img src="assets/how-to-play/02.png" alt="" class="img-fluid"></a></li>
+                                    <li><a href="https://ethereum.org/" title="Mist" target="_blank"><img src="assets/how-to-play/02.png" alt="" class="img-fluid"></a></li>
                                     <li><a href="https://metamask.io/" title="MetaMask" target="_blank"><img src="assets/how-to-play/03.png" alt="" class="img-fluid"></a></li>
                      <li><a href="https://jaxx.io/" title="Jaxx" target="_blank"><img src="assets/how-to-play/04.png" alt="" class="img-fluid"></a></li>
-                                    <li><a href="https://www.exodus.io/" title="Exodus Wallet" target="_blank"><img src="assets/how-to-play/05.png" alt="" class="img-fluid"></a></li>
+                                    <li><a href="https://www.exodus.io/" title="Exodus" target="_blank"><img src="assets/how-to-play/05.png" alt="" class="img-fluid"></a></li>
                                 </ul>
                             </div>
                             <p>2. Send the amount of ETH you want to bet on this address:</p>
@@ -360,10 +360,10 @@
                                 <div class="wallets">
                                     <ul>
                                         <li><img src="assets/how-to-play/01.png" alt="" class="img-fluid" title="MyEtherWallet"></li>
-                                        <li><img src="assets/how-to-play/02.png" alt="" class="img-fluid" title="Mist Ethereum"></li>
+                                        <li><img src="assets/how-to-play/02.png" alt="" class="img-fluid" title="Mist"></li>
                                         <li><img src="assets/how-to-play/03.png" alt="" class="img-fluid" title="MetaMask"></li>
                                         <li><img src="assets/how-to-play/04.png" alt="" class="img-fluid" title="Jaxx"></li>
-                                        <li><img src="assets/how-to-play/05.png" alt="" class="img-fluid" title="Exodus Wallet"></li>
+                                        <li><img src="assets/how-to-play/05.png" alt="" class="img-fluid" title="Exodus"></li>
                                     </ul>
                                 </div>
                                 <p>* all portfolios that accept betting games.</p>
@@ -592,10 +592,10 @@
                 <div class="wallets">
                     <ul>
                         <li><img src="assets/how-to-play/01.png" alt="" class="img-fluid" title="MyEtherWallet"></li>
-                        <li><img src="assets/how-to-play/02.png" alt="" class="img-fluid" title="Mist Ethereum"></li>
+                        <li><img src="assets/how-to-play/02.png" alt="" class="img-fluid" title="Mist"></li>
                         <li><img src="assets/how-to-play/03.png" alt="" class="img-fluid" title="MetaMask"></li>
                         <li><img src="assets/how-to-play/04.png" alt="" class="img-fluid" title="Jaxx"></li>
-                        <li><img src="assets/how-to-play/05.png" alt="" class="img-fluid" title="Exodus Wallet"></li>
+                        <li><img src="assets/how-to-play/05.png" alt="" class="img-fluid" title="Exodus"></li>
                     </ul>
                 </div>
                 <p>* all portfolios that accept betting games.</p>
@@ -885,10 +885,10 @@
                     <div class="wallets">
                         <ul>
                             <li><a href="https://www.myetherwallet.com/" title="MyEtherWallet" target="_blank"><img src="assets/how-to-play/01.png" alt="" class="img-fluid"></a></li>
-                            <li><a href="https://ethereum.org/" title="Mist Ethereum" target="_blank"><img src="assets/how-to-play/02.png" alt="" class="img-fluid"></a></li>
+                            <li><a href="https://ethereum.org/" title="Mist" target="_blank"><img src="assets/how-to-play/02.png" alt="" class="img-fluid"></a></li>
                             <li><a href="https://metamask.io/" title="MetaMask" target="_blank"><img src="assets/how-to-play/03.png" alt="" class="img-fluid"></a></li>
                             <li><a href="https://jaxx.io/" title="Jaxx" target="_blank"><img src="assets/how-to-play/04.png" alt="" class="img-fluid"></a></li>
-                            <li><a href="https://www.exodus.io/" title="Exodus Wallet" target="_blank"><img src="assets/how-to-play/05.png" alt="" class="img-fluid"></a></li>
+                            <li><a href="https://www.exodus.io/" title="Exodus" target="_blank"><img src="assets/how-to-play/05.png" alt="" class="img-fluid"></a></li>
                         </ul>
                     </div>
                     <p>2. Send the amount of ETH you want to bet on this address:</p>
