--- a/index.html
+++ b/index.html
@@ -731,7 +731,7 @@
                 </div>
             </div>
         </div>
-        <!-- Terminos -->
+        <!-- Terminos & transparencia-->
         <div class="terms" id="terms-window">
             <h2>Terms and Conditions</h2>
             <ul>
@@ -763,41 +763,6 @@
                 <li>We will NOT disclose the information we collect.</li>
                 <li>Our terms and conditions may be modified at any time as the company jackypot.io considers or requires, and it is your own responsibility to read such changes.</li>
             </ul>
-        </div>
-        <!-- Contacto -->
-        <div class="contact" id="contact-window">
-            <div class="container-contact">
-                <div class="contactanos">
-                    <h2>Contact Us</h2>
-                    <form>
-                        <input name="name" type="text" class="feedback-input" placeholder="Name" id="name" />
-                        <input name="email" type="text" class="feedback-input" placeholder="Email" id="email"/>
-                        <textarea name="text" class="feedback-input" placeholder="Comment" id="comment"></textarea>
-                        <input type="button" value="Send" onclick="datos_contactanos()"/>
-                    </form>
-                </div>
-                <div class="informacion-adicional">
-                    <h2>If you have any questions or wish to get in touch with us directly enter:</h2>
-                    <p>contact@jackypot.io</p>
-                    <table>
-                        <tr>
-                            <td><img src="assets/footer/twitter.png" alt=""></td>
-                            <td><p>Twitter: <a href="https://twitter.com/JackypotEth" target="_blank">@JackypotETH</a></p></td>
-                        </tr>
-                        <tr>
-                            <td><img src="assets/footer/facebook.png" alt=""></td>
-                            <td><p>Facebook: <a href="https://www.facebook.com/jackypotofficial/" target="_blank">Jackypotoficial</a></p></td>
-                        </tr>
-                        <tr>
-                            <td><img src="assets/footer/reddit.png" alt=""></td>
-                            <td><p>Reddit: <a href="https://www.reddit.com/user/Jackypot-official/" target="_blank">Jackypot-official</a></p></td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </div>
-        <!-- Transparencia -->
-        <div class="transparencia" id="transparencia-window">
             <h2>Transparency</h2>
             <div class="container-transparencia">
                 <p>Below is explained in detail, the process that is carried out in Jackypot.io</p>
@@ -812,15 +777,15 @@
                     <tbody>
                         <tr>
                             <td class="borde-vertical borde-horizontal"><img src="assets/game/slot/1.svg" alt="Cereza"></td>
-                            <td class="borde-horizontal"> = 1, 2 and 3</td>
+                            <td class="borde-horizontal"> = 1, 2, 3</td>
                         </tr>
                         <tr>
                             <td class="borde-vertical borde-horizontal"><img src="assets/game/slot/2.svg" alt="Cereza"></td>
-                            <td class="borde-horizontal"> = 4, 5 and 6</td>
+                            <td class="borde-horizontal"> = 4, 5, 6</td>
                         </tr>
                         <tr>
                             <td class="borde-vertical borde-horizontal"><img src="assets/game/slot/3.svg" alt="Cereza"></td>
-                            <td class="borde-horizontal"> = 7, 8 and 9</td>
+                            <td class="borde-horizontal"> = 7, 8, 9</td>
                         </tr>
                     </tbody>
                 </table>
@@ -843,7 +808,45 @@
                 <p><a href="http://triblive.com/aande/gambling/5509017-74/casino-player-percent" target="_blank">http://triblive.com/aande/gambling/5509017-74/casino-player-percent</a></p>
                 <p>That is why Jackypot is revolutionizing with the high technology of Blokchain applied in Ethereum, providing the best standards in security and speed, as well as having the possibility of winning up to 55.55% more, against what was determined in other sites of bets</p>
             </div>
+
         </div>
+        <!-- Contacto -->
+        <div class="contact" id="contact-window">
+            <div class="container-contact">
+                <div class="contactanos">
+                    <h2>Contact Us</h2>
+                    <form>
+                        <input name="name" type="text" class="feedback-input" placeholder="Name" id="name" />
+                        <input name="email" type="text" class="feedback-input" placeholder="Email" id="email"/>
+                        <textarea name="text" class="feedback-input" placeholder="Comment" id="comment"></textarea>
+                        <input type="button" value="Send" onclick="datos_contactanos()"/>
+                    </form>
+                </div>
+                <div class="informacion-adicional">
+                    <h2>If you have any questions or wish to get in touch with us directly enter:</h2>
+                    <p>contact@jackypot.io</p>
+                    <table>
+                        <tr>
+                            <td><img src="assets/footer/twitter.png" alt=""></td>
+                            <td><p>Twitter: <a href="https://twitter.com/JackypotEth" target="_blank" title="Twitter">@JackypotETH</a></p></td>
+                        </tr>
+                        <tr>
+                            <td><img src="assets/footer/facebook.png" alt=""></td>
+                            <td><p>Facebook: <a href="https://www.facebook.com/jackypotofficial/" target="_blank" title="Facebook">Jackypotoficial</a></p></td>
+                        </tr>
+                        <tr>
+                            <td><img src="assets/footer/reddit.png" alt=""></td>
+                            <td><p>Reddit: <a href="https://www.reddit.com/user/Jackypot-official/" target="_blank" title="Reddit">Jackypot-official</a></p></td>
+                        </tr>
+                        <tr>
+                            <td><img src="assets/footer/youtube.png" alt=""></td>
+                            <td><p>Youtube: <a href="https://www.youtube.com/channel/UCgCKLBUzJ7Su14SgBio6dsA" target="_blank" title="Youtube">Jackypot.io</a></p></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
+        <!-- Transparencia -->
         <div class="contenedor_video_div" id="contenedor_video_div">
             <img src="assets/game/close.png" alt="" onclick="cerrarVideo()">
             <iframe id="video" width="100%" height="200" src="https://www.youtube.com/embed/BJMqkJ5YT30" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
