Se cambio el last bet a mayus, btn de video en modal de howtoplay, tabla en how to play de index

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                                     Gwei required: 21.</p>
                             </div>
                         </div>
-                        <p>Wait for the result from 1 to 2 minutes, in <a title="Results" onclick="getfocus()" class="links">Last bet.</a>.</p>
+                        <p>Wait for the result from 1 to 2 minutes, in <a title="Results" onclick="getfocus()" class="links">LAST BET</a>.</p>
                         <p>3. Our prizes are:</p>
                         <div class="contenedor-premios">
                                 <img src="assets/how-to-play/premio1.png" alt="" class="img-fluid">
@@ -133,6 +133,28 @@
                             <img src="assets/how-to-play/13.png" alt="" class="img-fluid">
                             <img src="assets/how-to-play/10.png" alt="" class="img-fluid">
                             <img src="assets/how-to-play/14.png" alt="" class="img-fluid">
+                            <table class="representation-trans">
+                                <thead>
+                                    <tr>
+                                        <th class="borde-vertical">Symbols</th>
+                                        <th>Representation</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="borde-vertical borde-horizontal"><img src="assets/game/slot/1.svg" alt="Cereza"></td>
+                                        <td class="borde-horizontal"> = 1, 2, 3</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="borde-vertical borde-horizontal"><img src="assets/game/slot/2.svg" alt="Cereza"></td>
+                                        <td class="borde-horizontal"> = 4, 5, 6</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="borde-vertical borde-horizontal"><img src="assets/game/slot/3.svg" alt="Cereza"></td>
+                                        <td class="borde-horizontal"> = 7, 8, 9</td>
+                                    </tr>
+                                </tbody>
+                            </table>
                         </div>
                         <button class="btn-prizes" onclick="mostrar_premios()">SHOW MORE PRIZES</button>
                         <p>4. The prize will be sent automatically in your wallet.</p>
@@ -227,7 +249,7 @@
                                         Gwei required: 21.</p>
                                 </div>
                             </div>
-                            <p>Wait for the result from 1 to 2 minutes, in results.</p>
+                            <p>Wait for the result from 1 to 2 minutes, in LAST BET.</p>
                             <p>3. Our prizes are:</p>
                             <div class="contenedor-premios">
                                     <img src="assets/how-to-play/premio1.png" alt="" class="img-fluid">
@@ -899,7 +921,7 @@
                                 Gwei required: 21.</p>
                         </div>
                     </div>
-                    <p>Wait for the result from 1 to 2 minutes, in <a href="https://etherscan.io/address/0xfeac34425a3ba2fafbbeedb367ac5f4b4bb701d2" title="EtherSacn.io" target="_blank">Etherscan.io</a> or in our bets.</p>
+                    <p>Wait for the result from 1 to 2 minutes, in <a title="Results" onclick="getfocus()" class="links">LAST BET</a>.</p>
                     <p>3. Our prizes are:</p>
                     <div class="contenedor-premios">
                         <img src="assets/how-to-play/premio1.png" alt="" class="img-fluid">
@@ -917,6 +939,9 @@
                         <img src="assets/how-to-play/6.png" alt="" class="img-fluid">
                         <img src="assets/how-to-play/15.png" alt="" class="img-fluid">
                         <img src="assets/how-to-play/10.png" alt="" class="img-fluid">
+                    </div>
+                    <div class="contenedor_video">
+                        <button type="button" name="button" class="btn_video" onclick="openModal(this.id)" id="video">Show Tutorial</button>
                     </div>
                     <p>4. The prize will be sent automatically in your wallet.</p>
                     <p>5. Good luck!</p>
