Finalizamos con la rama de pruebas se unira a la master

--- a/index.html
+++ b/index.html
@@ -635,11 +635,11 @@
                 <h4>What wallets are used?</h4>
                 <div class="wallets">
                     <ul>
-                        <li><img src="assets/how-to-play/01.png" alt="" class="img-fluid" title="MyEtherWallet"></li>
-                        <li><img src="assets/how-to-play/02.png" alt="" class="img-fluid" title="Mist"></li>
-                        <li><img src="assets/how-to-play/03.png" alt="" class="img-fluid" title="MetaMask"></li>
-                        <li><img src="assets/how-to-play/04.png" alt="" class="img-fluid" title="Jaxx"></li>
-                        <li><img src="assets/how-to-play/05.png" alt="" class="img-fluid" title="Exodus"></li>
+                        <li><a href="https://www.myetherwallet.com/" title="MyEtherWallet" target="_blank"><img src="assets/how-to-play/01.png" alt="" class="img-fluid"></a></li>
+                        <li><a href="https://ethereum.org/" title="Mist" target="_blank"><img src="assets/how-to-play/02.png" alt="" class="img-fluid"></a></li>
+                        <li><a href="https://metamask.io/" title="MetaMask" target="_blank"><img src="assets/how-to-play/03.png" alt="" class="img-fluid"></a></li>
+                        <li><a href="https://jaxx.io/" title="Jaxx" target="_blank"><img src="assets/how-to-play/04.png" alt="" class="img-fluid"></a></li>
+                        <li><a href="https://www.exodus.io/" title="Exodus" target="_blank"><img src="assets/how-to-play/05.png" alt="" class="img-fluid"></a></li>
                     </ul>
                 </div>
                 <p>* all portfolios that accept betting games.</p>
@@ -814,7 +814,7 @@
                             <h2>Promotion 2</h2>
                         </div>
                         <div class="titulo-2">
-                            <h2 id="contador-tiros-entregados"></h2>
+                            <h2 id="contador-tiros-entregados" class="sombras-c">Loading...</h2>
                         </div>
 
                     </div>
