Se agrego una nueva clase de brillo con mas grosor

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                     </div>
                 </div>
                 <div class="contenedor_video">
-                    <button type="button" name="button" class="btn_video" onclick="openModal(this.id)" id="video">Show Tutorial</button>
+                    <button type="button" name="button" class="btn_video sombras-c-g" onclick="openModal(this.id)" id="video">Show Tutorial</button>
                 </div>
             </div>
             <!-- Chat -->
