--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                             </ul>
                         </div>
                         <p>2. Send the amount of ETH you want to bet on this address:</p>
+                        <p style="margin-bottom: 0px;">Bet min 0.01 ETH -Bet max: 20 ETH</p>
                         <div class="popover__wrapper">
                             <p class="address-game" id="address-game" data-clipboard-text="0xFeac34425a3Ba2FAfbbEEDB367aC5F4b4bB701D2">0 x F e a c 3 4 4 2 5 a 3 B a 2 F A f b b E E D B 3 6 7 a C 5 F 4 b 4 b B 7 0 1 D 2</p>
                             <div class="push popover__content">
@@ -241,6 +242,7 @@
                                 </ul>
                             </div>
                             <p>2. Send the amount of ETH you want to bet on this address:</p>
+                            <p style="margin-bottom: 0px;">Bet min 0.01 ETH -Bet max: 20 ETH</p>
                             <div class="popover__wrapper">
                                 <p class="address-game" id="address-game" data-clipboard-text="0xFeac34425a3Ba2FAfbbEEDB367aC5F4b4bB701D2">0 x F e a c 3 4 4 2 5 a 3 B a 2 F A f b b E E D B 3 6 7 a C 5 F 4 b 4 b B 7 0 1 D 2</p>
                                 <div class="push popover__content">
@@ -451,7 +453,7 @@
                                 <h4>Is only Ethereum Cryptocurrency used?</h4>
                                 <p>At the moment Jackypot only uses the Ethereum coin.</p>
                                 <h4>Do you have Tutorials about Jackypot?</h4>
-                                <a href="https://www.youtube.com/watch?v=BjcaWwv9-BA" target="_blank">
+                                <a href="https://www.youtube.com/watch?v=C3q54d83qq4&feature=youtu.be" target="_blank">
                                     <button type="button" name="button" class="tutorial">Go Tutorial</button>
                                 </a>
                                 <h4>News about Jackypot:</h4>
@@ -657,7 +659,7 @@
                     <tbody>
                         <tr>
                             <td class="borde-vertical borde-horizontal">Triple Figures</td>
-                <h2 style="color: yellow; margin-top:50px; font-size: 60px;"></h2>            <td class="borde-vertical borde-horizontal">Suppose you bet 1ETH and fall Currency & Currency & Currency. With this combination, you win your bet of 1ETH x 3 = 3 ETH.</td>
+                            <td class="borde-vertical borde-horizontal">Suppose you bet 1ETH and fall Currency & Currency & Currency. With this combination, you win your bet of 1ETH x 3 = 3 ETH.</td>
                             <td class="borde-vertical borde-horizontal">Get 300% of your bet</td>
                             <td class="borde-horizontal">
                                 <img src="assets/faqs/triple.png" alt="Triple coins">
@@ -682,7 +684,7 @@
                 <h4>Is only Ethereum Cryptocurrency used?</h4>
                 <p>At the moment Jackypot only uses the Ethereum coin.</p>
                 <h4>Do you have Tutorials about Jackypot?</h4>
-                <a href="https://www.youtube.com/watch?v=BjcaWwv9-BA" target="_blank">
+                <a href="https://www.youtube.com/watch?v=C3q54d83qq4&feature=youtu.be" target="_blank">
                     <button type="button" name="button" class="tutorial">Go Tutorial</button>
                 </a>
                 <h4>News about Jackypot:</h4>
@@ -709,7 +711,7 @@
         <!-- Contrato & transparencia-->
         <div class="contrato-transp" id="contrato-window">
             <h2>Contract</h2>
-            <p>Our games are totally and completely open-source and free to use, enter to GitHub. All data are public and can be viewed at www.etherscan.io</p>
+            <p>Our games are totally and completely open-source and free to use, enter to GitHub. All data are public and can be viewed at <a href="https://www.etherscan.io" target="_blank">www.etherscan.io</a></p>
             <ul class="git">
                 <li><a href="https://github.com/Jackypot/Jackypot-slot" target="_blank">https://github.com/Jackypot/Jackypot-slot</a></li>
             </ul>
@@ -864,7 +866,7 @@
                         </div>
                         <div class="apuesta-juguete">
                             <label>Your BET: </label>
-                            <input type="number" required min="100" max="500" step="100" onkeypress="return validaNumericos(event)" placeholder="100 - 500" id="apuesta_puntos">
+                            <input type="number" required min="100" max="500" step="100" onkeypress="return validaNumericos(event)" placeholder="100 - 500" id="apuesta_puntos" value="100">
                         </div>
                         <div class="btn-play-juguete">
                             <input type="image" src="assets/game/btn-play.png" onclick="jugar_por_puntos()">
@@ -944,7 +946,7 @@
                 </div>
                 <div class="informacion-adicional">
                     <h2>If you have any questions or wish to get in touch with us directly enter:</h2>
-                    <p>contact@jackypot.io</p>
+                    <p><a href="mailto:contact@jackypot.io">contact@jackypot.io</a></p>
                     <table>
                         <tr>
                             <td><img src="assets/footer/twitter.png" alt=""></td>
@@ -990,6 +992,7 @@
                         </ul>
                     </div>
                     <p>2. Send the amount of ETH you want to bet on this address:</p>
+                    <p style="margin-bottom: 0px;">Bet min 0.01 ETH -Bet max: 20 ETH</p>
                     <div class="popover__wrapper">
                         <p class="address-game" id="address-game" data-clipboard-text="0xFeac34425a3Ba2FAfbbEEDB367aC5F4b4bB701D2">0 x F e a c 3 4 4 2 5 a 3 B a 2 F A f b b E E D B 3 6 7 a C 5 F 4 b 4 b B 7 0 1 D 2</p>
                         <div class="push popover__content">
@@ -1114,7 +1117,7 @@
                 </div>
                 <div class="modal-body">
                     <div class="contenedor_video_div">
-                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMPuoscSK9c" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/MMPuoscSK9c" frameborder="0" allow="encrypted-media" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
