agrege icono al email

--- a/index.html
+++ b/index.html
@@ -946,8 +946,12 @@
                 </div>
                 <div class="informacion-adicional">
                     <h2>If you have any questions or wish to get in touch with us directly enter:</h2>
-                    <p><a href="mailto:contact@jackypot.io">contact@jackypot.io</a></p>
+
                     <table>
+                        <tr>
+                            <td><img src="assets/footer/email.png" alt=""></td>
+                            <td><p>Email: <a href="mailto:contact@jackypot.io">contact@jackypot.io</a></p></td>
+                        </tr>
                         <tr>
                             <td><img src="assets/footer/twitter.png" alt=""></td>
                             <td><p>Twitter: <a href="https://twitter.com/JackypotEth" target="_blank" title="Twitter">@JackypotETH</a></p></td>
