--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                                 <li><a href="https://www.exodus.io/" title="Exodus" target="_blank"><img src="assets/how-to-play/05.png" alt="" class="img-fluid"></a></li>
                             </ul>
                         </div>
-                        <p>2. Send the amount of ETH you want to bet on this address:</p>
-                        <p style="margin-bottom: 0px;">Bet min 0.01 ETH -Bet max: 20 ETH</p>
+                        <p style="margin-bottom: 0px;">2. Send the amount of ETH you want to bet on this address:</p>
+                        <p class="text-small">(Bet min 0.01 ETH - Bet max: 20 ETH)</p>
                         <div class="popover__wrapper">
                             <p class="address-game" id="address-game" data-clipboard-text="0xFeac34425a3Ba2FAfbbEEDB367aC5F4b4bB701D2">0 x F e a c 3 4 4 2 5 a 3 B a 2 F A f b b E E D B 3 6 7 a C 5 F 4 b 4 b B 7 0 1 D 2</p>
                             <div class="push popover__content">
