--- a/index.html
+++ b/index.html
@@ -180,14 +180,15 @@
                     <!-- Form -->
                     <div class="address-machine" id="contenedor_address_machine">
                         <!-- Aqui se escribe desde el JS -->
-
+                        <div class="contenedor-address"> <p class="remove" id="address-machine">Ethereum Wallet Address Of The Participant</p> </div>
                     </div>
                     <div class="bet" id="contenedor_apuesta_machine">
                         <!-- Aqui se escribe desde el JS -->
-
+                        <div class="contenedor-profit"> <p class="remove" id="bet-machine">Profit</p> </div>
                     </div>
                     <div class="btn-play" id="contenedor_btn_machine">
                         <!-- Aqui se escribe desde el JS -->
+                        <input type="image" src="assets/game/btn-play.png" onclick="openModal(this.id)" id="how-play">
                     </div>
                 </div>
                 <div class="contenedor_video">
